# BehindBarsPulse

./: .cache_ggshield  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  TODO.md  alembic.ini  app.py  cloudbuild.yaml  core.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: narrative_context.json
data/collected_articles/: 2026-01-29.json  2026-01-30.json  2026-01-31.json  2026-01-january-backfill.json  2026-02-02.json
data/scraped_urls/: january_2026_urls.json
functions/process-batch/: main.py  requirements.txt
mail_sender/: __init__.py
mail_sender/templates/: behind_bars_template.html  behind_bars_template.txt
previous_issues/: 20250104.txt  20250105.txt  20250106.txt  20250107.txt  20260107_issue_preview.html  20260107_issue_preview.txt  20260115_issue_preview.html  20260115_issue_preview.txt  20260121_issue_preview.html  20260121_issue_preview.txt  20260128_issue_preview.html  20260128_issue_preview.txt  20260129_issue_preview.html  20260129_issue_preview.txt  20260130_issue_preview.html  20260130_issue_preview.txt  index.html
rssence/: __init__.py  ai_helper.py  feeds.py  openai_api.py
scripts/: backfill_embeddings.py  cleanup_prison_events.py  cleanup_production_data.py  enrich_and_import.py  fetch_january_articles.py  import_newsletters.py  migrate_data.py  normalize_facilities.py  reextract_events.py  regenerate_embeddings.py  scrape_january.py  test_smtp.py
src/behind_bars_pulse/: __init__.py  __main__.py  collector.py  (+2 more)
tests/: __init__.py  conftest.py  test_analytics.py  test_bulletin.py  test_cli.py  test_collector.py  test_config.py  test_digest_routes.py  test_embedding_service.py  test_export.py  test_extraction.py  test_facilities.py  test_feeds.py  test_narrative_integration.py  test_narrative_matching.py  test_narrative_models.py  test_narrative_storage.py  test_newsletter.py  test_rag.py  test_run_weekly.py  test_sender.py  test_subscriber.py  test_trends.py  test_weekly.py
(+113 files in other folders)
