# ABOUTME: Project configuration for BehindBarsPulse newsletter system.
# ABOUTME: Defines dependencies, build system, and tool configurations.

[project]
name = "behind-bars-pulse"
version = "0.1.0"
description = "Automated Italian-language newsletter about the Italian prison system and justice reform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Max" }]

dependencies = [
    "google-genai>=1.0.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12.3",
    "lxml-html-clean>=0.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "Jinja2>=3.1.5",
    "python-dateutil>=2.9.0",
    "structlog>=25.0.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/behind_bars_pulse"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["behind_bars_pulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/behind_bars_pulse"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
